Refactor login page styles and add login.js

--- a/user/login.css
+++ b/user/login.css
@@ -230,7 +230,7 @@ input {
 }
 
 .overlay {
-    background-image: url('../img/Peace.gif');
+    background-image: url('../img/Stirfry.gif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
